Separate 2026/27 membership fees from Rotterdam archive
